# billion_scale_search_lib

./: README.md
cmake_practice/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial  cmake_install.cmake  tutorial.cpp
cmake_practice/MathFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake  mysqrt.cpp
cmake_practice/Testing/Temporary/: CTestCostData.txt
parts/Dataset_processing/: Index.cpp  Index.h  a.out  quantizer.h  read_dataset_ivf.cpp  read_dataset_nsg.cpp
whole/: Layer_Structure.cpp  Layer_Structure.h  Parser.h  main.cpp  utils.h
